--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "scripts": {
     "clean": "npx hardhat clean",
+    "compile": "npm run clean && npx hardhat compile",
     "chain": "npx hardhat node",
     "deploy": "npx hardhat run --network localhost scripts/deploy.ts",
-    "deploy:rinkeby": "npx hardhat run --network rinkeby scripts/deploy.ts",
+    "deploy:ftmtest": "npx hardhat run --network ftmtestnet scripts/deploy.ts",
     "test": "npx hardhat test"
   },
   "keywords": [],
@@ -15,19 +16,21 @@
   "license": "ISC",
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.0",
+    "@nomiclabs/hardhat-etherscan": "^2.1.6",
     "@nomiclabs/hardhat-solhint": "^2.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.0",
     "@openzeppelin/contracts": "^4.3.2",
-    "@typechain/ethers-v5": "^7.0.1",
+    "@typechain/ethers-v5": "^7.1.2",
     "@typechain/hardhat": "^2.3.0",
-    "@types/chai": "^4.2.21",
+    "@types/chai": "^4.2.22",
     "@types/mocha": "^9.0.0",
-    "@types/node": "^16.9.1",
+    "@types/node": "^16.10.3",
     "chai": "^4.3.4",
+    "dotenv": "^10.0.0",
     "ethereum-waffle": "^3.0.0",
-    "ethers": "^5.0.0",
-    "hardhat": "^2.6.4",
-    "prettier": "^2.4.0",
+    "ethers": "^5.4.7",
+    "hardhat": "^2.6.5",
+    "prettier": "^2.4.1",
     "prettier-plugin-solidity": "^1.0.0-beta.18",
     "solhint": "^3.3.6",
     "solhint-plugin-prettier": "^0.0.5",
